List.of does not compile, undoing edit